Adição de duas novas funções, Tabela (simples) e múltiplos dados sem concatenação em uma linha, sendo:
template.mustache: adição das linhas HTML para a criação da tabela e o parâmetro {{.}} para a chamada de múltiplos dados.

Report.lua: adição das duas ovas funções (ainda em fase de teste)

As novas funções ainda estão em fase de teste, contendo um layout básico no apresentação final da aplicação.

--- a/lib/template/template.mustache
+++ b/lib/template/template.mustache
@@ -181,6 +181,28 @@
 						<h4 class="custom-font-subtitle"><strong>{{heading}}</strong></h4>
 						<br/>
 						{{/heading}}
+						
+
+						<!-- Função Tablela -->
+						<table border="1" style="padding: 5px">
+							{{#tabela}}
+								<tr>
+									{{#th}}<th>{{.}}</th>{{/th}}
+								</tr>
+								<tr>
+									{{#td}}<td>{{.}}</td>{{/td}}
+								</tr>
+							{{/tabela}}
+						</table>
+
+
+						<!-- Função Multiplos -->
+						{{#multiplos}}
+							{{.}}
+						{{/multiplos}}
+						
+						
+						
 						{{#image}}
 						<img class="report-img" src="{{image}}"/>
 						<br/>
