--- a/lib/template/template.mustache
+++ b/lib/template/template.mustache
@@ -183,26 +183,42 @@
 						{{/heading}}
 						
 
+
+						<!-- Seção de testes de novas funções -->
 						<!-- Função Tablela -->
-						<table border="1" style="padding: 5px">
+						<table class="table table-hover">
 							{{#tabela}}
+							<tr>
+								{{#title}}<th colspan="5" class="text-center">{{.}}</th>{{/title}}
+							<tr>
 								<tr>
-									{{#th}}<th>{{.}}</th>{{/th}}
+									{{#th}}
+										<th>{{Col1}}</th>
+										<th>{{Col2}}</th>
+										<th>{{Col3}}</th>
+										<th>{{Col4}}</th>
+										<th>{{Col5}}</th>
+									{{/th}}
 								</tr>
-								<tr>
-									{{#td}}<td>{{.}}</td>{{/td}}
-								</tr>
+									{{#td}}
+										<tr>
+											<td>{{Col1}}</td>
+											<td>{{Col2}}</td>
+											<td>{{Col3}}</td>
+											<td>{{Col4}}</td>
+											<td>{{Col5}}</td>
+										</tr>
+									{{/td}}
 							{{/tabela}}
 						</table>
-
-
+						<br/>
 						<!-- Função Multiplos -->
-						{{#multiplos}}
+						{{#mult}}
 							{{.}}
-						{{/multiplos}}
-						
-						
-						
+						{{/mult}}
+						<br/>
+
+
 						{{#image}}
 						<img class="report-img" src="{{image}}"/>
 						<br/>
