--- a/lib/template/template.mustache
+++ b/lib/template/template.mustache
@@ -182,7 +182,7 @@
 						<br/>
 						{{/heading}}
 						{{#graphic}}
-						<!-- Function addGraphic - Gera uma tabela oculta para apresentação do gráfico -->
+						<!-- Function addGraphic -->
 							<table class="table table-hover {{select}}-{{id}} hidden" id="data">
 							<tr>
 								{{#title}}<th colspan="100%" class="text-center">{{.}}</th>{{/title}}
@@ -204,7 +204,7 @@
 							</div>
 						{{/graphic}}
 						{{#matrix}}
-						<!-- Function addTable - Gera a tabela sem o gráfico -->
+						<!-- Function addTable -->
 						<div class="table-responsive">
 							<table class="table table-hover table-responsive" id="data">
 								<tr>
